exercise-02/wordpress-deployment-canary.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: wordpress-canary
  namespace: exercise-02
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: wordpress-canary
        type: wpfront
    spec:
      containers:
      - image: bitnami/wordpress:4.9.5
        name: wordpress
        ports:
        - name: http
          containerPort: 80
        livenessProbe:
          exec:
            command: ["curl", "-X", "GET", "127.0.0.1"]
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
        readinessProbe:
          exec:
            command: ["curl", "-X", "GET", "127.0.0.1"]
          initialDelaySeconds: 5
          periodSeconds: 2
          timeoutSeconds: 1
