exercise-02/nginx-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: exercise-02
spec:
  type: NodePort
  ports:
  - name: http
    port: 80
    targetPort: http
  selector:
    app: nginx
