exercise-02/wordpress-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-svc
  namespace: exercise-02
spec:
  type: NodePort
  ports:
  - name: http
    port: 80
    targetPort: http
  selector:
    type: wpfront
